<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="checkedChat">읽은 목록</string>
    <string name="unCheckedChat">읽지않은 목록</string>
    <string name="checkedDocument">확인한 업무연락</string>
    <string name="unCheckedDocument">확인하지 않은 업무연락</string>
    <string name="openedSurvey">진행중인 설문</string>
    <string name="closedSurvey">지난 설문</string>
    
    <string name="menu">메뉴</string>
    <string name="add">추가</string>
    <string name="back">뒤로</string>
    <string name="list">목록</string>
    <string name="done">완료</string>
    <string name="cancel">취소</string>
    <string name="compose">작성</string>
    <string name="submit">제출</string>
    <string name="send">전송</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="edit">편집</string>
    <string name="modify">수정</string>
    <string name="survey">설문</string>
    <string name="document">문서</string>
    <string name="doc">문서</string>
    <string name="command">지시보고</string>
    <string name="forward">전달</string>
    <string name="fwd">전달</string>
    <string name="title">제목</string>
    <string name="duration">기간</string>
    <string name="result">결과</string>
    <string name="did">참여</string>
    <string name="didnot">미참여</string>
    <string name="rank">계급</string>
    <string name="role">직책</string>
    <string name="department">부서</string>
    <string name="name">이름</string>
    <string name="subTitle">부제목</string>
    <string name="none">해당 없음</string>
    <string name="letSelect">선택해주세요</string>
    
    <string name="sender">발신자</string>
    <string name="receiver">수신자</string>
    
    <!-- <string name="memberTitle">조직도</string> -->
    <string name="memberListTitle">조직도</string>
    <string name="commandTitle">지시와 보고</string>
    <string name="meeting">회의</string>
    <string name="surveyTitle">설문</string>
    <string name="registration">등록</string>
    <string name="documentTitle">업무연락</string>
    <string name="documentReceivedTitle">받은 업무연락</string>
    <string name="documentDepartedTitle">보낸 업무연락</string>
    <string name="surveyDepartedTitle">보낸 설문</string>
    <string name="surveyReceivedTitle">받은 설문</string>
    <string name="surveyComposeTitle">설문 작성</string>
    <string name="documentFavoriteTitle">중요 업무연락</string>
    <string name="memberFavoriteTitle">즐겨찾는 그룹</string>
    <string name="meetingTitle">회의</string>
    <string name="documentForwardTitle">전달 문서</string>
    <string name="conditionalSearchTitle">조건부검색</string>
    <string name="condition_location">지역</string>
    <string name="condition_department">소속</string>
    <string name="condition_rank">계급</string>
    <string name="condition_role">직책</string>
    
    <string name="statusChecked">확인</string>
    <string name="statusUnchecked">미확인</string>
    <string name="statusAnswered">참여</string>
    <string name="statusNotAnswered">미참여</string>
    <string name="button">버튼</string>
    <string name="question_index">Q.</string>
    <string name="question_title_placehold">질문 제목을 입력하세요.</string>
    <string name="option_title_placehold">선택지 내용을 입력하세요.</string>
    <string name="question_is_multiple">복수 답변 가능</string>
    <string name="add_question">질문 추가 하기</string>
    <string name="add_condition">조건 추가 하기</string>
    <string name="survey_title_placehold">설문 제목을 입력하세요.</string>
    <string name="survey_content_placehold">설문 요지를 입력하세요.</string>
    <string name="survey_receivers_placehold">수신자를 선택하세요.</string>
    <string name="survey_open_year_placehold">시작년도</string>
    <string name="survey_open_month_placehold">월</string>
    <string name="survey_open_day_placehold">일</string>
    <string name="survey_close_year_placehold">종료년도</string>
    <string name="survey_close_month_placehold">월</string>
    <string name="survey_close_day_placehold">일</string>
    <string name="document_receivers_placehold">수신자를 선택하세요.</string>
    <string name="receivers_placehold">수신자를 선택하세요</string>
    
    
    <string name="notification_command_ticker">지시∙보고가 도착했습니다.</string>
    <string name="notification_command_title"></string>
    <string name="notification_command_content"></string>
    
    <string name="notification_meeting_ticker">회의 내용이 도착했습니다.</string>
    <string name="notification_meeting_title"></string>
    <string name="notification_meeting_content"></string>
    
    <string name="notification_document_ticker">업무연락이 도착했습니다.</string>
    <string name="notification_document_title"></string>
    <string name="notification_document_content"></string>
    
    <string name="notification_survey_ticker">설문이 도착했습니다.</string>
    <string name="notification_survey_title"></string>
    <string name="notification_survey_content"></string>
    
    
    <string name="fromTo">~</string>
    <string name="dummy"> </string>
    <string name="sampleListIndex">1.</string>
    <string name="sampleDT">2012.02.22 오후 07:13:40</string>
    <string name="sampleSender">경찰청 경비국 경비3계 이영철</string>
    <string name="sampleForwarder">경찰청 경비국 경비3계 이영철</string>
    <string name="sampleSurveyOpenDT">2012.10.02</string>
    <string name="sampleSurveyCloseDT">2013.07.11</string>
    <string name="sampleTime">12:34</string>
    <string name="labelReceiver">수신자 : </string>
    <string name="labelSurveyDuration">설문기간</string>
    <string name="labelForwarder">전달자 : </string>
    <string name="labelSender">발신자 : </string>
    <string name="loremIpsumShort">국회의원은 청렴의 의무가 있다. 국회의원은 국회에서 ...e</string>
    <string name="loremIpsum">모든 국민은 자기의 행위가 아닌 친족의 행위로 인하여 불이익한 처우를 받지 아니한다. 모든 국민은 그 보호하는 자녀에게 적어도 초등교육과 법률이 정하는 교육을 받게 할 의무를 진다. 국가는 법률...e</string>
    <string name="loremIpsumLong">모든 국민은 근로의 권리를 가진다. 국가는 개인이 가지는 불가침의 기본적 인권을 확인하고 이를 보장할 의무를 진다. 모든 국민은 근로의 권리를 가진다. 모든 국민은 능력에 따라 균등하게 교육을 받을 권리를 가진다. 연소자의 근로는 특별한 보호를 받는다. 대통령이 임시회의 집회를 요구할 때에는 기간과 집회요구의 이유를 명시하여야 한다. 정당의 목적이나 활동이 민주적 기본질서에 위배될 때에는 정부는 헌법재판소에 그 해산을 제소할 수 있고, 정당은 헌법재판소의 심판에 의하여 해산된다. 의무교육은 무상으로 한다. 타인의 범죄행위로 인하여 생명·신체에 대한 피해를 받은 국민은 법률이 정하는 바에 의하여 국가로부터 구조를 받을 수 있다.e</string>
        
        
    <string name="formatString_openDT">yyyy.MM.dd</string>
    <string name="formatString_closeDT">yyyy.MM.dd</string>
    <string name="formatString_regular">yyyy.MM.dd HH:mm:ss</string>
    <string name="formatString_FullDate">yyyy.MM.dd</string>
    <string name="app_name">다On</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>SlidingMenu&lt;/b> is an Open Source Android library 
        that allows developers to easily create applications with sliding menus like those 
        made popular in the Google+, YouTube, and Facebook applications. 
        You can find it on GitHub by clicking the little octocat icon in the ActionBar. 
        Feel free to use it all you want in your Android apps provided 
        that you cite this project and include the license in your app.
        &lt;br>&lt;br>
		SlidingMenu is currently used in some incredibly popular Android 
		apps such as Zappos, Plume, VLC for Android, and The Verge. 
		If you are using SlidingMenu in your app and would like to be 
		listed here, please let me know via Twitter (@slidingmenu)!</string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		Unless required by applicable law or agreed to in writing, 
		software distributed under the License is distributed on an 
		\'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
		either express or implied. See the License for the specific 
		language governing permissions and limitations under the License.</string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>
    
    
    
    <string name="placehold_search">Search</string>
    
</resources>