<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical" >
    
    <include 
        layout="@layout/navigation_bar" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="@dimen/gap"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <!-- android:paddingRight="5px"  -->
            
				    <LinearLayout
				        android:id="@+id/metadata"
				        android:layout_width="match_parent"
				    		android:layout_height="wrap_content" 
				    		android:padding = "@dimen/gap"
				    		android:layout_marginTop = "@dimen/gapSmall"
				    		android:layout_marginBottom = "@dimen/gapSmall"
				        android:background="@color/white"
				        android:orientation="vertical">
				        
				        <TextView
				            android:id="@+id/title"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/title"
				            android:textColor="@color/text"
				            android:textSize="16sp" />
				        
				        <TextView
				            android:id="@+id/arrivalDT"
				            android:text="@string/sampleDT"
				            android:textSize="12sp"
				            android:textColor="@color/gray"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content" />
				        
				        
				        <ImageView
				            android:layout_width="match_parent"
				            android:layout_height="2dp"
				            android:layout_margin="@dimen/gapSmaller"
				            android:contentDescription="@string/dummy"
				            android:src="@drawable/hr" />
				        
				        <LinearLayout
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content" 
						        android:paddingTop="5dp"
						        android:paddingBottom="5dp"
						        android:orientation="horizontal" >
						        <TextView
						            android:text="@string/labelSender"
				            		android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
						        <TextView
						            android:id="@+id/sender"
						            android:text="@string/sampleSender"
				            		android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
						    </LinearLayout>
				        
				        <ImageView
				            android:layout_width="match_parent"
				            android:layout_height="2dp"
				            android:layout_margin="@dimen/gapSmaller"
				            android:contentDescription="@string/dummy"
				            android:src="@drawable/hr" />
						    
				        <LinearLayout
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content" 
						        android:paddingTop="5dp"
						        android:paddingBottom="5dp"
						        android:orientation="horizontal" >
								    <TextView
						            android:text="@string/labelSurveyDuration"
						            android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
						        <TextView
						            android:id="@+id/openDT"
						            android:text="@string/sampleSurveyOpenDT"
						            android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
						        <TextView
						            android:text="@string/fromTo"
						            android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
						        <TextView
						            android:id="@+id/closeDT"
						            android:text="@string/sampleSurveyCloseDT"
						            android:textColor="@color/gray"
						            android:layout_width="wrap_content"
						            android:layout_height="wrap_content" />
				        </LinearLayout>
				        
				        <ImageView
				            android:layout_width="match_parent"
				            android:layout_height="2dp"
				            android:layout_margin="@dimen/gapSmaller"
				            android:contentDescription="@string/dummy"
				            android:src="@drawable/hr" />
				        
				    		<TextView
				    		    android:id="@+id/chat_content"
				    		    android:layout_width="match_parent"
				    		    android:layout_height="wrap_content"
				    		    android:layout_marginBottom="5dp"
				    		    android:layout_marginTop="5dp"
				    		    android:text="@string/loremIpsum"
				    		    android:textColor="@color/text" />
				    
				    </LinearLayout>
				
				    <LinearLayout
				        android:id="@+id/questions"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				    		android:layout_marginBottom = "@dimen/gapSmaller"
				        android:orientation="vertical" >
				
				    </LinearLayout>
				    
				</LinearLayout>
		</ScrollView>

</LinearLayout>