<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:padding = "@dimen/gap"
		android:layout_marginTop = "@dimen/gapSmall"
		android:layout_marginBottom = "@dimen/gapSmall"
    android:background="@color/white"
    android:orientation="vertical">
    
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" 
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:orientation="horizontal" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/labelForwarder"
          android:textColor="@color/text" />

      <TextView
          android:id="@+id/forwarder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sampleForwarder"
          android:textColor="@color/text" />

  	</LinearLayout>
  
    <TextView
        android:id="@+id/arrivalDT"
        android:text="@string/sampleDT"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/gapSmaller"
        android:contentDescription="@string/dummy"
        android:src="@drawable/hr" />
    
		<TextView
		    android:id="@+id/content"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="5dp"
		    android:layout_marginTop="5dp"
		    android:textColor="@color/text" />

</LinearLayout>
