<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/member_user_cell"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gapSmall" >

        <LinearLayout
            android:id="@+id/ll_user_pic_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/gapSmall"
            android:gravity="center"
            android:minWidth="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dummy"
                android:src="@drawable/user_pic_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/department"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/name"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textColor="@color/text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
